# health-grafana

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  compose-example.yml  override-default-vars.env.example  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
Grafana_Dashboard/: Apple-Dashboard.json  Blood-Work-Dashboard.json  Cardio-Health-Dashboard.json  Garmin-Grafana-Dashboard.json  Multi-Source-Health-Dashboard.json  Oura-Dashboard.json
Grafana_Datasource/: influxdb.yaml
config/: normal_ranges.yaml
docs/: apple-health-import.md  auto-deploy.md  home-assistant-setup.md  oura-setup.md  ubuntu-deployment.md
homeassistant-config/: configuration.yaml
scripts/: check_secrets.py  deploy.sh  import_blood_test.py  migrate_oura_sleep_timestamps.py
src/garmin_grafana/: __init__.py  discrepancy.py  garmin_fetch.py  health_summary.py  normal_ranges.py  orchestrator.py  summary_webhook.py
src/garmin_grafana/sources/: __init__.py  apple_healthkit.py  oura_fetch.py  unified_schema.py
