[project]
name = "health-grafana"
version = "0.4.0"
description = "Multi-source personal health data (Garmin + Oura) into InfluxDB + Grafana, with cross-source consolidation and discrepancy detection."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "dotenv==0.9.9",
    "fitparse==1.2.0",
    "garminconnect==0.3.2",
    "influxdb==5.3.2",
    "influxdb3-python==0.12.0",
    "pandas==2.2.3",
]

[project.scripts]
garmin-fetch = "garmin_grafana:main"
health-fetch = "garmin_grafana:main"